objects/POC_Asset_Metric__c.object
<CustomObject>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <label>Week</label>
        <type>Date</type>
    </fields>
    <label>POC Asset Metric</label>
    <nameField>
        <displayFormat>PAM-{0}</displayFormat>
        <label>POC Asset Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POC Asset Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>